refac : dto 및 엔티티 생성전략 수정중